--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/common.css" />
-  <title>Document</title>
+  <title>Index</title>
 </head>
 <body>
   <h1>VS Code(v1.67.2) color reference</h1>
   <ul>
     <li><a href="./editor.html">editor</a></li>
+    <li><a href="./activityBar.html">activityBar</a></li>
   </ul>
 </body>
 </html>
