add siderBar color

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <ul>
     <li><a href="./editor.html">editor</a></li>
     <li><a href="./activityBar.html">activityBar</a></li>
+    <li><a href="./sideBar.html">sideBar</a></li>
   </ul>
 </body>
 </html>
