delete unnecessary html tag

--- a/editor.html
+++ b/editor.html
@@ -102,7 +102,7 @@
 
     <section>
       <h2>editor.wordHighlightBackground</h2>
-      <p></p>
+      <p>unknown</p>
       <figure>
         <img class="" alt="editor.wordHighlightBackground" src="./img/editor/editor.wordHighlightBackground.png" />
       </figure>
@@ -110,7 +110,7 @@
 
     <section>
       <h2>editor.wordHighlightStrongBackground</h2>
-      <p></p>
+      <p>unknown</p>
       <figure>
         <img class="" alt="editor.wordHighlightStrongBackground" src="./img/editor/editor.wordHighlightStrongBackground.png" />
       </figure>
