--- a/sideBar.html
+++ b/sideBar.html
@@ -12,7 +12,7 @@
 <body>
   <nav><a href="./index.html">return</a></nav>
   <main>
-    <h1>editor</h1>
+    <h1>sideBar</h1>
   </main>
 
   <article>
