--- a/editor.html
+++ b/editor.html
@@ -102,7 +102,7 @@
 
     <section>
       <h2>editor.wordHighlightBackground</h2>
-      <p>unknown</p>
+      <p>コードなどで選択したアイテム？</p>
       <figure>
         <img class="" alt="editor.wordHighlightBackground" src="./img/editor/editor.wordHighlightBackground.png" />
       </figure>
