--- a/editor.html
+++ b/editor.html
@@ -94,7 +94,7 @@
   <article>
     <section>
       <h2>editor.rangeHighlightBackground</h2>
-      <p>unknown</p>
+      <p>検索結果の対象となっている行</p>
       <figure>
         <img class="" alt="editor.rangeHighlightBackground" src="./img/editor/editor.rangeHighlightBackground.png" />
       </figure>
@@ -102,7 +102,7 @@
 
     <section>
       <h2>editor.wordHighlightBackground</h2>
-      <p>コードなどで選択したアイテム？</p>
+      <p対になっているHTMLタグ</p>
       <figure>
         <img class="" alt="editor.wordHighlightBackground" src="./img/editor/editor.wordHighlightBackground.png" />
       </figure>
@@ -110,7 +110,7 @@
 
     <section>
       <h2>editor.wordHighlightStrongBackground</h2>
-      <p>unknown</p>
+      <p>変数のハイライト？</p>
       <figure>
         <img class="" alt="editor.wordHighlightStrongBackground" src="./img/editor/editor.wordHighlightStrongBackground.png" />
       </figure>
