--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <li><a href="./editor.html">editor</a></li>
     <li><a href="./activityBar.html">activityBar</a></li>
     <li><a href="./sideBar.html">sideBar</a></li>
+    <li><a href="./list.html">list</a></li>
   </ul>
 
   <footer>
