--- a/activityBar.html
+++ b/activityBar.html
@@ -18,47 +18,89 @@
   <article>
     <section>
       <h2>activityBar.background</h2>
-      <p></p>
+      <p>Activity Bar background color.</p>
       <figure>
         <img class="" alt="activityBar.background" src="./img/activityBar/activityBar.background.png" />
       </figure>
     </section>
 
     <section>
-      <h2>activityBar.border</h2>
-      <p></p>
+      <h2>activityBar.dropBorder</h2>
+      <p>Drag and drop feedback color for the activity bar items. The activity bar is showing on the far left or right and allows to switch between views of the side bar.</p>
       <figure>
-        <img class="" alt="activityBar.border" src="./img/activityBar/activityBar.border.png" />
+        <img class="" alt="activityBar.dropBorder" src="./img/activityBar/activityBar.dropBorder.png" />
       </figure>
     </section>
 
     <section>
       <h2>activityBar.foreground</h2>
-      <p></p>
+      <p>Activity Bar foreground color (for example used for the icons).</p>
       <figure>
         <img class="" alt="activityBar.foreground" src="./img/activityBar/activityBar.foreground.png" />
       </figure>
     </section>
-  </article>
 
+    <section>
+      <h2>activityBar.inactiveForeground</h2>
+      <p>Activity Bar item foreground color when it is inactive.</p>
+      <figure>
+        <img class="" alt="activityBar.inactiveForeground" src="./img/activityBar/activityBar.inactiveForeground.png" />
+      </figure>
+    </section>
+
+    <section>
+      <h2>activityBar.border</h2>
+      <p>Activity Bar border color with the Side Bar.</p>
+      <figure>
+        <img class="" alt="activityBar.border" src="./img/activityBar/activityBar.border.png" />
+      </figure>
+    </section>
+
+  </article>
 
   <article>
     <section>
-      <h2>activityBarBadge.foreground</h2>
-      <p></p>
-      <figure>
-        <img class="" alt="activityBarBadge.foreground" src="./img/activityBar/activityBarBadge.foreground.png" />
-      </figure>
-    </section>
-    <section>
       <h2>activityBarBadge.background</h2>
-      <p></p>
+      <p>Activity notification badge background color.</p>
       <figure>
         <img class="" alt="activityBarBadge.background" src="./img/activityBar/activityBarBadge.background.png" />
       </figure>
     </section>
+
+    <section>
+      <h2>activityBarBadge.foreground</h2>
+      <p>Activity notification badge foreground color.</p>
+      <figure>
+        <img class="" alt="activityBarBadge.foreground" src="./img/activityBar/activityBarBadge.foreground.png" />
+      </figure>
+    </section>
   </article>
 
+  <article>
+    <section>
+      <h2>activityBar.activeBorder</h2>
+      <p>Activity Bar active indicator border color.</p>
+      <figure>
+        <img class="" alt="activityBar.activeBorder" src="./img/activityBar/activityBar.activeBorder.png" />
+      </figure>
+    </section>
+
+    <section>
+      <h2>activityBar.activeBackground</h2>
+      <p>Activity Bar optional background color for the active element.</p>
+      <figure>
+        <img class="" alt="activityBar.activeBackground" src="./img/activityBar/activityBar.activeBackground.png" />
+      </figure>
+    </section>
+
+    <section>
+      <h2>activityBar.activeFocusBorder</h2>
+      <p>Activity bar focus border color for the active item.</p>
+      <figure>
+        <img class="" alt="activityBar.activeFocusBorder" src="./img/activityBar/activityBar.activeFocusBorder.png" />
+      </figure>
+    </section>
+  </article>
 
 </body>
 </html>
