--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="jp">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,18 +8,67 @@
   <link rel="stylesheet" href="./css/common.css" />
   <title>Index</title>
 </head>
-<body>
-<!-- https://code.visualstudio.com/api/references/theme-color -->
-  <h1>VS Code(v1.67.2) color reference</h1>
-  <ul>
-    <li><a href="./editor.html">editor</a></li>
-    <li><a href="./activityBar.html">activityBar</a></li>
-    <li><a href="./sideBar.html">sideBar</a></li>
-    <li><a href="./list.html">list</a></li>
-  </ul>
 
+<body>
+  <!-- https://code.visualstudio.com/api/references/theme-color -->
+  <header>
+    <h1>VS Code(v1.67.2) color reference</h1>
+    <div class="center"><a href="https://code.visualstudio.com/api/references/theme-color">official site</a></div>
+  </header>
+  <main>
+    <ul>
+      <li><a href="./base.html">Base colors</a></li>
+      <li><a href="#" class="disabled">Window border</a></li>
+      <li><a href="#" class="disabled">Text colors</a></li>
+      <li><a href="#" class="disabled">Action colors</a></li>
+      <li><a href="#" class="disabled">Button control</a></li>
+      <li><a href="#" class="disabled">Dropdown control</a></li>
+      <li><a href="#" class="disabled">Input control</a></li>
+      <li><a href="#" class="disabled">Scrollbar control</a></li>
+      <li><a href="#" class="disabled">Badge</a></li>
+      <li><a href="#" class="disabled">Progress bar</a></li>
+      <li><a href="./list.html">Lists and trees</a></li>
+      <li><a href="./activityBar.html">activityBar</a></li>
+      <li><a href="./sideBar.html">sideBar</a></li>
+      <li><a href="#" class="disabled">Minimap</a></li>
+      <li><a href="#" class="disabled">Editor Groups & Tabs</a></li>
+      <li><a href="./editor.html">Editor colors</a></li>
+      <li><a href="#" class="disabled">Diff editor colors</a></li>
+      <li><a href="#" class="disabled">Editor widget colors</a></li>
+      <li><a href="#" class="disabled">Peek view colors</a></li>
+      <li><a href="#" class="disabled">Merge conflicts colors</a></li>
+      <li><a href="#" class="disabled">Panel colors</a></li>
+      <li><a href="#" class="disabled">Status Bar colors</a></li>
+      <li><a href="#" class="disabled">Title Bar colors</a></li>
+      <li><a href="#" class="disabled">Menu Bar colors</a></li>
+      <li><a href="#" class="disabled">Notification colors</a></li>
+      <li><a href="#" class="disabled">Banner colors</a></li>
+      <li><a href="#" class="disabled">Extensions colors</a></li>
+      <li><a href="#" class="disabled">Quick picker colors</a></li>
+      <li><a href="#" class="disabled">Keybinding label colors</a></li>
+      <li><a href="#" class="disabled">Keyboard shortcut table colors</a></li>
+      <li><a href="#" class="disabled">Integrated Terminal colors</a></li>
+      <li><a href="#" class="disabled">Debug colors</a></li>
+      <li><a href="#" class="disabled">Testing colors</a></li>
+      <li><a href="#" class="disabled">Welcome page colors</a></li>
+      <li><a href="#" class="disabled">Source Control colors</a></li>
+      <li><a href="#" class="disabled">Git colors</a></li>
+      <li><a href="#" class="disabled">Settings Editor colors</a></li>
+      <li><a href="#" class="disabled">Snippets colors</a></li>
+      <li><a href="#" class="disabled">Symbol Icons colors</a></li>
+      <li><a href="#" class="disabled">Debug Icons colors</a></li>
+      <li><a href="#" class="disabled">Notebook colors</a></li>
+      <li><a href="#" class="disabled">Chart colors</a></li>
+      <li><a href="#" class="disabled">Ports Colors</a></li>
+      <li><a href="#" class="disabled">Extension colors</a></li>
+
+    </ul>
+  </main>
+
+  <br/><br/>
   <footer>
-  掲載している情報は自分が色をカスタマイズした項目のみです。
+    掲載している情報は自分が色をカスタマイズした項目のみです。また掲載している画像も一例です。
   </footer>
 </body>
+
 </html>
