add editor groups and tab

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <li><a href="./activityBar.html">activityBar</a></li>
       <li><a href="./sideBar.html">sideBar</a></li>
       <li><a href="#" class="disabled">Minimap</a></li>
-      <li><a href="#" class="disabled">Editor Groups & Tabs</a></li>
+      <li><a href="./editorGroupsTabs.html">Editor Groups &amp; Tabs</a></li>
       <li><a href="./editor.html">Editor colors</a></li>
       <li><a href="#" class="disabled">Diff editor colors</a></li>
       <li><a href="#" class="disabled">Editor widget colors</a></li>
