add some editorGroupHeader and tab

--- a/editorGroupsTabs.html
+++ b/editorGroupsTabs.html
@@ -106,6 +106,7 @@
     <section>
       <h2>editorGroup.dropIntoPromptForeground</h2>
       <p>Foreground color of text shown over editors when dragging files. This text informs the user that they can hold shift to drop into the editor.</p>
+      <p class="jp-comment">タブをエディタにドラッグすると分かりやすい。SSを撮るのは難しかったので諦めた。</p>
       <figure>
         <img class="" alt="editorGroup.dropIntoPromptForeground" src="./img/editorGroupsTabs/editorGroup.dropIntoPromptForeground.png" />
       </figure>
@@ -116,6 +117,7 @@
     <section>
       <h2>editorGroup.dropIntoPromptBackground</h2>
       <p>Background color of text shown over editors when dragging files. This text informs the user that they can hold shift to drop into the editor.</p>
+      <p class="jp-comment">タブをエディタにドラッグすると分かりやすい。SSを撮るのは難しかったので諦めた。</p>
       <figure>
         <img class="" alt="editorGroup.dropIntoPromptBackground" src="./img/editorGroupsTabs/editorGroup.dropIntoPromptBackground.png" />
       </figure>
@@ -126,6 +128,7 @@
     <section>
       <h2>editorGroup.dropIntoPromptBorder</h2>
       <p>Border color of text shown over editors when dragging files. This text informs the user that they can hold shift to drop into the editor.</p>
+      <p class="jp-comment">タブをエディタにドラッグすると分かりやすい。SSを撮るのは難しかったので諦めた。</p>
       <figure>
         <img class="" alt="editorGroup.dropIntoPromptBorder" src="./img/editorGroupsTabs/editorGroup.dropIntoPromptBorder.png" />
       </figure>
