add title bar color

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <li><a href="#" class="disabled">Merge conflicts colors</a></li>
       <li><a href="#" class="disabled">Panel colors</a></li>
       <li><a href="#" class="disabled">Status Bar colors</a></li>
-      <li><a href="#" class="disabled">Title Bar colors</a></li>
+      <li><a href="./titleBar.html">Title Bar colors</a></li>
       <li><a href="#" class="disabled">Menu Bar colors</a></li>
       <li><a href="#" class="disabled">Notification colors</a></li>
       <li><a href="#" class="disabled">Banner colors</a></li>
