update editor color and input color

--- a/editor.html
+++ b/editor.html
@@ -146,5 +146,15 @@ To see the editor indent guides, set "editor.guides.indentation": true and "edit
     </section>
   </article>
 
+  <article>
+    <section>
+      <h2>editorCursor.foreground</h2>
+      <p>Color of the editor cursor.</p>
+      <figure>
+        <img class="" alt="editorCursor.foreground" src="./img/editor/editorCursor.foreground.png" />
+      </figure>
+    </section>
+  </article>
+
 </body>
 </html>
